--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"@panzoom/panzoom": "^4.5.1",
 		"bootstrap": "^5.2.3",
 		"jest-environment-jsdom": "^29.5.0",
-		"monaco-editor": "^0.40.0"
+		"monaco-editor": "^0.40.0",
+		"svelte-select": "^5.7.0"
 	}
 }
