--- a/package.json
+++ b/package.json
@@ -6,16 +6,32 @@
 		"prepare": "svelte-kit sync",
 		"dev": "vite dev",
 		"build": "vite build",
+		"build-lib": "vite build --config vite.config.lib.js",
 		"preview": "vite preview",
+		"package": "svelte-kit sync && svelte-package && publint",
 		"test": "npm run build && jest",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write ."
 	},
+	"exports": {
+		".": {
+			"types": "./dist/index.d.ts",
+			"svelte": "./dist/index.js"
+		}
+	},
+	"files": [
+		"dist",
+		"!dist/**/*.test.*",
+		"!dist/**/*.spec.*"
+	],
 	"jest": {
 		"testEnvironment": "jsdom",
 		"verbose": true
+	},
+	"peerDependencies": {
+		"svelte": "^4.0.0"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.22.5",
@@ -23,25 +39,32 @@
 		"@babel/plugin-transform-runtime": "^7.19.6",
 		"@babel/preset-env": "^7.22.5",
 		"@babel/preset-typescript": "^7.22.5",
+		"@crinkles/digl": "^2.0.3",
+		"@panzoom/panzoom": "^4.5.1",
 		"@rollup/plugin-babel": "^6.0.3",
 		"@rollup/plugin-commonjs": "^24.1.0",
 		"@rollup/plugin-node-resolve": "^15.1.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"@sveltejs/package": "^2.2.3",
 		"@sveltejs/vite-plugin-svelte": "^2.4.1",
 		"@types/bootstrap": "^5.2.6",
 		"@types/jest": "^29.5.2",
 		"autoprefixer": "^10.4.13",
 		"babel-jest": "^29.5.0",
+		"bootstrap": "^5.3.2",
 		"cl-editor": "^2.3.0",
 		"core-js": "^3.29.1",
-		"cpy-cli": "^4.2.0",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"jest": "^29.5.0",
+		"jest-environment-jsdom": "^29.7.0",
+		"monaco-editor": "^0.44.0",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
+		"publint": "^0.2.5",
 		"rollup-plugin-css-only": "^4.3.0",
+		"rollup-plugin-inject-process-env": "^1.3.1",
 		"rollup-plugin-postcss": "^4.0.2",
 		"rollup-plugin-string": "^3.0.0",
 		"rollup-plugin-svelte": "^7.1.5",
@@ -49,6 +72,7 @@
 		"svelte": "^4.0.0",
 		"svelte-check": "^3.4.3",
 		"svelte-jester": "^2.3.2",
+		"svelte-select": "^5.8.1",
 		"sveltejs-tippy": "^3.0.0",
 		"ts-jest": "^29.1.0",
 		"ts-node": "^10.9.1",
@@ -56,12 +80,6 @@
 		"vite": "^4.0.0"
 	},
 	"type": "module",
-	"dependencies": {
-		"@crinkles/digl": "^2.0.3",
-		"@panzoom/panzoom": "^4.5.1",
-		"bootstrap": "^5.3.2",
-		"jest-environment-jsdom": "^29.5.0",
-		"monaco-editor": "^0.40.0",
-		"svelte-select": "^5.7.0"
-	}
+	"svelte": "./dist/index.js",
+	"types": "./dist/index.d.ts"
 }
