--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"@babel/preset-env": "^7.22.5",
 		"@babel/preset-typescript": "^7.22.5",
 		"@crinkles/digl": "^2.0.3",
+		"@fortawesome/fontawesome-free": "^6.5.1",
 		"@panzoom/panzoom": "^4.5.1",
 		"@rollup/plugin-babel": "^6.0.3",
 		"@rollup/plugin-commonjs": "^24.1.0",
@@ -77,7 +78,8 @@
 		"ts-jest": "^29.1.0",
 		"ts-node": "^10.9.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.0.0"
+		"vite": "^4.5.1",
+		"vite-plugin-static-copy": "^0.17.0"
 	},
 	"type": "module",
 	"svelte": "./dist/index.js",
