--- a/package.json
+++ b/package.json
@@ -83,5 +83,8 @@
 	},
 	"type": "module",
 	"svelte": "./dist/index.js",
-	"types": "./dist/index.d.ts"
+	"types": "./dist/index.d.ts",
+	"dependencies": {
+		"d3": "^7.8.5"
+	}
 }
