--- a/package.json
+++ b/package.json
@@ -50,12 +50,14 @@
 		"@sveltejs/package": "^2.2.3",
 		"@sveltejs/vite-plugin-svelte": "^2.4.1",
 		"@types/bootstrap": "^5.2.6",
+		"@types/d3": "^7.4.3",
 		"@types/jest": "^29.5.2",
 		"autoprefixer": "^10.4.13",
 		"babel-jest": "^29.5.0",
 		"bootstrap": "^5.3.2",
 		"cl-editor": "^2.3.0",
 		"core-js": "^3.29.1",
+		"d3": "^7.8.5",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"jest": "^29.5.0",
@@ -83,8 +85,5 @@
 	},
 	"type": "module",
 	"svelte": "./dist/index.js",
-	"types": "./dist/index.d.ts",
-	"dependencies": {
-		"d3": "^7.8.5"
-	}
+	"types": "./dist/index.d.ts"
 }
