--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
 		"svelte-check": "^3.4.3",
 		"svelte-jester": "^2.3.2",
 		"svelte-select": "^5.8.3",
-		"sveltejs-tippy": "^3.0.0",
+		"tippy.js": "^6.3.7",
 		"ts-jest": "^29.1.0",
 		"ts-node": "^10.9.1",
 		"typescript": "^5.0.0",
