--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ node_modules
 !.env.example
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+/.claude/settings.local.json
 
 # Sync scripts for WSL/Windows development
 sync-to-windows.sh
