--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"@types/bootstrap": "^5.2.6",
 		"@types/d3": "^7.4.3",
 		"@types/jest": "^29.5.2",
+		"@types/randomcolor": "^0.5.9",
 		"autoprefixer": "^10.4.13",
 		"babel-jest": "^29.5.0",
 		"bootstrap": "^5.3.3",
@@ -66,6 +67,7 @@
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
 		"publint": "^0.2.5",
+		"randomcolor": "^0.6.2",
 		"rollup-plugin-css-only": "^4.3.0",
 		"rollup-plugin-inject-process-env": "^1.3.1",
 		"rollup-plugin-postcss": "^4.0.2",
