--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"babel-jest": "^29.5.0",
 		"bootstrap": "^5.3.3",
 		"cl-editor": "^2.3.0",
+		"colord": "^2.9.3",
 		"core-js": "^3.29.1",
 		"d3": "^7.8.5",
 		"eslint": "^8.28.0",
