--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,25 @@
 {
-	"extends": "./.svelte-kit/tsconfig.json",
-	"compilerOptions": {
-		"target": "es2015",
-		"allowJs": true,
-		"checkJs": true,
-		"esModuleInterop": true,
-		"forceConsistentCasingInFileNames": true,
-		"resolveJsonModule": true,
-		"skipLibCheck": true,
-		"sourceMap": true,
-		"strict": true
-	}
+  "extends": "./.svelte-kit/tsconfig.json",
+  "compilerOptions": {
+    "target": "es2015",
+    "allowJs": true,
+    "checkJs": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "sourceMap": true,
+    "strict": true,
+    "baseUrl": ".",
+    "paths": {
+      "$lib": ["./src/lib"],
+      "$lib/*": ["./src/lib/*"],
+
+      "@Inputs": ["./src/lib/Inputs"],
+      "@Inputs/*": ["./src/lib/Inputs/*"],
+
+      "@Infrastructure": ["./src/lib/Infrastructure"],
+      "@Infrastructure/*": ["./src/lib/Infrastructure/*"]
+    }
+  }
 }
